--- a/gardener/gardener.Android/Properties/AndroidManifest.xml
+++ b/gardener/gardener.Android/Properties/AndroidManifest.xml
@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionCode="1" android:versionName="1.0" package="com.companyname.gardener">
-	<uses-sdk android:minSdkVersion="21" android:targetSdkVersion="28" />
-	<application android:label="gardener.Android"></application>
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionName="1.0.1" package="com.companyname.gardener" android:installLocation="auto" android:versionCode="2">
+	<uses-sdk android:minSdkVersion="19" android:targetSdkVersion="28" />
+	<application android:label="gardener.Android" android:icon="@drawable/pict_1"></application>
 </manifest>
