--- a/src/gardener.Android/Properties/AndroidManifest.xml
+++ b/src/gardener.Android/Properties/AndroidManifest.xml
@@ -2,5 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionName="1.0.1" package="com.itmit.gardener" android:installLocation="auto" android:versionCode="2">
 	<uses-sdk android:minSdkVersion="23" android:targetSdkVersion="28" />
 	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+	<uses-permission android:name="android.permission.CALL_PHONE" />
+	<uses-permission android:name="android.permission.CALL_PRIVILEGED" />
 	<application android:label="gardener.Android" android:icon="@drawable/pict_1"></application>
 </manifest>
