--- a/src/gardener/gardener.csproj
+++ b/src/gardener/gardener.csproj
@@ -20,6 +20,9 @@
     <Compile Update="Views\CallSecurityPage.xaml.cs">
       <DependentUpon>CallSecurityPage.xaml</DependentUpon>
     </Compile>
+    <Compile Update="Views\CoursePage.xaml.cs">
+      <DependentUpon>CoursePage.xaml</DependentUpon>
+    </Compile>
     <Compile Update="Views\EmployCallPage.xaml.cs">
       <DependentUpon>EmployCallPage.xaml</DependentUpon>
     </Compile>
@@ -44,6 +47,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <EmbeddedResource Update="index.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
     <EmbeddedResource Update="Views\BlocksViews\BlockViewCell.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
@@ -54,6 +60,9 @@
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
     <EmbeddedResource Update="Views\CallSecurityPage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
+    <EmbeddedResource Update="Views\CoursePage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
     <EmbeddedResource Update="Views\EmployCallPage.xaml">
