--- a/src/gardener.Android/Properties/AndroidManifest.xml
+++ b/src/gardener.Android/Properties/AndroidManifest.xml
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionName="1.0.1" package="com.itmit.gardener" android:installLocation="auto" android:versionCode="2">
-	<uses-sdk android:minSdkVersion="16" android:targetSdkVersion="28" />
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionName="1.1.1" package="com.itmit.gardener" android:installLocation="auto" android:versionCode="4">
+	<uses-sdk android:targetSdkVersion="28" />
 	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 	<uses-permission android:name="android.permission.CALL_PHONE" />
 	<uses-permission android:name="android.permission.CALL_PRIVILEGED" />
