--- a/src/gardener.Android/gardener.Android.csproj
+++ b/src/gardener.Android/gardener.Android.csproj
@@ -77,9 +77,10 @@
     <PackageReference Include="Xamarin.Android.Support.v7.MediaRouter" Version="28.0.0.1" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="CustomEntryRenderer.cs" />
-    <Compile Include="ExtendedViewCellRenderer.cs" />
+    <Compile Include="Renderers\CustomEntryRenderer.cs" />
+    <Compile Include="Renderers\ExtendedViewCellRenderer.cs" />
     <Compile Include="MainActivity.cs" />
+    <Compile Include="Renderers\ZoomScrollViewRenderer.cs" />
     <Compile Include="Resources\Resource.designer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
