Бронь свободных мест

--- a/src/gardener/gardener.csproj
+++ b/src/gardener/gardener.csproj
@@ -101,6 +101,9 @@
     <EmbeddedResource Update="Views\ListView\ListSalePage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
+    <EmbeddedResource Update="Views\ReservationPage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
     <EmbeddedResource Update="Views\SalePage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
