--- a/src/gardener.Android/gardener.Android.csproj
+++ b/src/gardener.Android/gardener.Android.csproj
@@ -56,6 +56,12 @@
     <PackageReference Include="DependencyServiceExtended">
       <Version>1.1.0</Version>
     </PackageReference>
+    <PackageReference Include="Realm">
+      <Version>4.1.0</Version>
+    </PackageReference>
+    <PackageReference Include="Xamarin.Android.Arch.Work.Runtime">
+      <Version>1.0.0</Version>
+    </PackageReference>
     <PackageReference Include="Xamarin.Essentials">
       <Version>1.1.0</Version>
     </PackageReference>
@@ -67,6 +73,8 @@
     <PackageReference Include="Xamarin.Android.Support.v7.MediaRouter" Version="28.0.0.1" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="NewsNotifyingAndroid.cs" />
+    <Compile Include="NewsNotifyingWorker.cs" />
     <Compile Include="Renderers\CustomEntryRenderer.cs" />
     <Compile Include="Renderers\ExtendedViewCellRenderer.cs" />
     <Compile Include="MainActivity.cs" />
