--- a/src/gardener.iOS/gardener.iOS.csproj
+++ b/src/gardener.iOS/gardener.iOS.csproj
@@ -61,9 +61,10 @@
     <WarningLevel>4</WarningLevel>
     <MtouchArch>ARM64</MtouchArch>
     <ConsolePause>false</ConsolePause>
-    <CodesignKey>iPhone Distribution</CodesignKey>
+    <CodesignKey>iPhone Developer</CodesignKey>
     <CodesignEntitlements>Entitlements.plist</CodesignEntitlements>
     <MtouchFloat32>true</MtouchFloat32>
+    <CodesignProvision>GardenerDev</CodesignProvision>
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="Main.cs" />
@@ -150,6 +151,16 @@
     <ImageAsset Include="Assets.xcassets\AppIcon-1.appiconset\87.png">
       <Visible>false</Visible>
     </ImageAsset>
+    <ImageAsset Include="Assets.xcassets\LaunchImage.launchimage\Contents.json" />
+    <ImageAsset Include="Assets.xcassets\LaunchImage.launchimage\Default.png" />
+    <ImageAsset Include="Assets.xcassets\LaunchImage.launchimage\Default%402x.png" />
+    <ImageAsset Include="Assets.xcassets\LaunchImage.launchimage\Default-568h%402x.png" />
+    <ImageAsset Include="Assets.xcassets\LaunchImage.launchimage\Default-Portrait.png" />
+    <ImageAsset Include="Assets.xcassets\LaunchImage.launchimage\Default-Portrait%402x.png" />
+    <ImageAsset Include="Assets.xcassets\AppIcon-1.appiconset\l_80x80 %281%29.png" />
+    <ImageAsset Include="Assets.xcassets\AppIcon-1.appiconset\l_120x120 %281%29.png" />
+    <ImageAsset Include="Assets.xcassets\AppIcon-1.appiconset\l_120x120 %281%29-1.png" />
+    <ImageAsset Include="Assets.xcassets\AppIcon-1.appiconset\l_180x180 %281%29.png" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="System" />
@@ -175,21 +186,6 @@
   </ItemGroup>
   <ItemGroup>
     <BundleResource Include="Resources\CNY.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <BundleResource Include="Resources\Default.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <BundleResource Include="Resources\Default%402x.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <BundleResource Include="Resources\Default-568h%402x.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <BundleResource Include="Resources\Default-Portrait.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <BundleResource Include="Resources\Default-Portrait%402x.png" />
   </ItemGroup>
   <ItemGroup>
     <BundleResource Include="Resources\entc2.png" />
