--- a/src/gardener.Android/Properties/AndroidManifest.xml
+++ b/src/gardener.Android/Properties/AndroidManifest.xml
@@ -1,5 +1,5 @@
-<?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionName="1.1.4" package="com.itmit.gardener" android:installLocation="auto" android:versionCode="7">
+﻿<?xml version="1.0" encoding="utf-8"?>
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionName="12" package="com.itmit.gardener" android:installLocation="auto" android:versionCode="8">
 	<uses-sdk android:targetSdkVersion="28" />
 	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 	<uses-permission android:name="android.permission.CALL_PHONE" />
