--- a/src/gardener/gardener.csproj
+++ b/src/gardener/gardener.csproj
@@ -11,6 +11,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="LRP.Xamarin.Forms.ZoomScrollView" Version="1.1.0" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.2" />
     <PackageReference Include="Realm" Version="4.1.0" />
     <PackageReference Include="Xam.Plugin.Connectivity" Version="3.2.0" />
