Изменение структуры новостей, добавлен на карту Новый ТЦ.

--- a/src/gardener.iOS/Info.plist
+++ b/src/gardener.iOS/Info.plist
@@ -22,11 +22,11 @@
 	<key>MinimumOSVersion</key>
 	<string>8.0</string>
 	<key>CFBundleDisplayName</key>
-	<string>gardener</string>
+	<string>Садовод онлайн</string>
 	<key>CFBundleIdentifier</key>
 	<string>com.itmit.gardener</string>
 	<key>CFBundleVersion</key>
-	<string>1.4</string>
+	<string>1.5</string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>XSAppIconAssets</key>
@@ -39,7 +39,7 @@
 	<key>XSLaunchImageAssets</key>
 	<string>Assets.xcassets/LaunchImage.launchimage</string>
 	<key>CFBundleShortVersionString</key>
-	<string>1.4</string>
+	<string>1.5</string>
 	<key>CFBundleName</key>
 	<string>Садовод онлайн</string>
 </dict>
