--- a/src/gardener.Android/gardener.Android.csproj
+++ b/src/gardener.Android/gardener.Android.csproj
@@ -76,6 +76,7 @@
   <ItemGroup>
     <Compile Include="NewsNotifyingAndroid.cs" />
     <Compile Include="NewsNotifyingWorker.cs" />
+    <Compile Include="PushNotificationService.cs" />
     <Compile Include="Renderers\CustomEntryRenderer.cs" />
     <Compile Include="Renderers\ExtendedViewCellRenderer.cs" />
     <Compile Include="MainActivity.cs" />
